--- a/DEP Tasks/My Own/ToursWebsite/index.html
+++ b/DEP Tasks/My Own/ToursWebsite/index.html
@@ -1,21 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Nature Tours | Home</title>
     <!--Ion Icons-->
-    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <link
+      href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css"
+      rel="stylesheet"
+    />
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Aldrich&display=swap"
+      rel="stylesheet"
+    />
     <!--Our own stylesheet-->
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <nav>
+          <div class="nav-brand">
+            <a href="index.html">
+              <img src="./images/logo.png" alt="" />
+            </a>
+          </div>
+          <div class="menu-icons open">
+            <i class="icons ion-md-menu"></i>
+          </div>
+
+          <ui class="nav-list">
+            <div class="menu-icon close">
+              <i class="icons ion-md-close"></i>
+            </div>
+            <li class="nav-item">
+                
+            </li>
+          </ui>
+        </nav>
+      </div>
+    </header>
 
     <script type="text/javascript" src="scripts.js"></script>
-</body>
+  </body>
 </html>
