--- a/DEP Tasks/Trainers Task/JSCore/YoutubeDummy/index.html
+++ b/DEP Tasks/Trainers Task/JSCore/YoutubeDummy/index.html
@@ -53,4 +53,14 @@
 
     <script src="index.js"></script>
   </body>
+
+<!-- for testin via jasmine -->
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/jasmine.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/jasmine.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/jasmine-html.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.5.0/boot.min.js"></script>
+ 
+<script src="toDo.js"></script>
+<!-- for testin via jasmine -->
+
 </html>
